Fix for IE9 Grid Unit align with inline-block

--- a/src/grid/grid.scss
+++ b/src/grid/grid.scss
@@ -7,7 +7,6 @@
 */
 
 .grid {
-	*display: block;
 	display: -webkit-flex;
 	-webkit-flex-flow: row wrap;
 	display: -ms-flexbox;
@@ -16,7 +15,6 @@
 
 	[class *= "grid-unit"] {
 		display: inline-block;
-		*display: inline;
 		vertical-align: top;
 		box-sizing: border-box;
 		padding-left: 0.625em;
@@ -24,6 +22,11 @@
 		word-spacing: normal;
 		text-rendering: auto;
 		zoom: 1;
+		margin-left: -0.3125em \0; // IE9 Fix
+
+		&:first-child {
+			padding-left: 0.9375em \0; //IE9 Fix
+		}
 
 		&:last-child {
 			padding-right: 0.625em;
